--- a/HouHavn.Web/Pages/Lists/Berths/Index.cshtml
+++ b/HouHavn.Web/Pages/Lists/Berths/Index.cshtml
@@ -5,30 +5,33 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Liste over bådpladser</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
+<table>
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Berth[0].BerthId)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Berth[0].Bridge)
             </th>
-            <th></th>
+            <th>
+
+            </th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model.Berth) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.BerthId)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Bridge)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.BerthId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.BerthId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.BerthId">Delete</a>
+                <a asp-page="./Delete" asp-route-id="@item.BerthId" class="delete">Delete</a>
             </td>
         </tr>
 }
