--- a/HouHavn.Web/Pages/Lists/Berths/Delete.cshtml
+++ b/HouHavn.Web/Pages/Lists/Berths/Delete.cshtml
@@ -5,24 +5,32 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Slet bådplads</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Er du sikker på at du vil slette denne bådplads?</h3>
 <div>
-    <h4>Berth</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
+    <dl>
+        <dt>
             @Html.DisplayNameFor(model => model.Berth.Bridge)
         </dt>
-        <dd class="col-sm-10">
+        <dd>
             @Html.DisplayFor(model => model.Berth.Bridge)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Berth.BerthId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Berth.BerthId)
         </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Berth.BerthId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+
+        <div class="submit">
+            <input type="submit" value="Delete" class="delete" />
+        </div>
         <a asp-page="./Index">Back to List</a>
     </form>
 </div>
