--- a/HouHavn.Web/Pages/Shared/_Layout.cshtml
+++ b/HouHavn.Web/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
                 <form action="/Creation/SearchResult" method="get" autocomplete="off">
-                    <input type="text" placeholder="Søg" name="searchQuery" />
+                    <input type="text" placeholder="Personer, Båd navn, Båd type" name="searchQuery" />
                     <input type="submit" value="Søg" />
                 </form>
             </nav>
