--- a/HouHavn.Web/Pages/Lists/People/Delete.cshtml
+++ b/HouHavn.Web/Pages/Lists/People/Delete.cshtml
@@ -5,90 +5,93 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Slet kunde</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Er du sikker på at du vil slette denne kunde?</h3>
 <div>
-    <h4>Person</h4>
+
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
+    <dl >
+        <dt >
             @Html.DisplayNameFor(model => model.Person.FirstName)
         </dt>
-        <dd class="col-sm-10">
+        <dd >
             @Html.DisplayFor(model => model.Person.FirstName)
         </dd>
-        <dt class="col-sm-2">
+        <dt>
             @Html.DisplayNameFor(model => model.Person.LastName)
         </dt>
-        <dd class="col-sm-10">
+        <dd >
             @Html.DisplayFor(model => model.Person.LastName)
         </dd>
-        <dt class="col-sm-2">
+        <dt>
             @Html.DisplayNameFor(model => model.Person.Address)
         </dt>
-        <dd class="col-sm-10">
+        <dd >
             @Html.DisplayFor(model => model.Person.Address)
         </dd>
-        <dt class="col-sm-2">
+        <dt >
             @Html.DisplayNameFor(model => model.Person.PostalCode)
         </dt>
-        <dd class="col-sm-10">
+        <dd>
             @Html.DisplayFor(model => model.Person.PostalCode)
         </dd>
-        <dt class="col-sm-2">
+        <dt >
             @Html.DisplayNameFor(model => model.Person.City)
         </dt>
-        <dd class="col-sm-10">
+        <dd >
             @Html.DisplayFor(model => model.Person.City)
         </dd>
-        <dt class="col-sm-2">
+        <dt >
             @Html.DisplayNameFor(model => model.Person.Country)
         </dt>
-        <dd class="col-sm-10">
+        <dd >
             @Html.DisplayFor(model => model.Person.Country)
         </dd>
-        <dt class="col-sm-2">
+        <dt >
             @Html.DisplayNameFor(model => model.Person.PhoneNumber)
         </dt>
-        <dd class="col-sm-10">
+        <dd>
             @Html.DisplayFor(model => model.Person.PhoneNumber)
         </dd>
-        <dt class="col-sm-2">
+        <dt>
             @Html.DisplayNameFor(model => model.Person.Email)
         </dt>
-        <dd class="col-sm-10">
+        <dd >
             @Html.DisplayFor(model => model.Person.Email)
         </dd>
-        <dt class="col-sm-2">
+        <dt >
             @Html.DisplayNameFor(model => model.Person.Member)
         </dt>
-        <dd class="col-sm-10">
+        <dd >
             @Html.DisplayFor(model => model.Person.Member)
         </dd>
-        <dt class="col-sm-2">
+        <dt >
             @Html.DisplayNameFor(model => model.Person.BoatGuild)
         </dt>
-        <dd class="col-sm-10">
+        <dd >
             @Html.DisplayFor(model => model.Person.BoatGuild)
         </dd>
-        <dt class="col-sm-2">
+        <dt >
             @Html.DisplayNameFor(model => model.Person.DingyGuild)
         </dt>
-        <dd class="col-sm-10">
+        <dd >
             @Html.DisplayFor(model => model.Person.DingyGuild)
         </dd>
-        <dt class="col-sm-2">
+        <dt >
             @Html.DisplayNameFor(model => model.Person.Notes)
         </dt>
-        <dd class="col-sm-10">
+        <dd >
             @Html.DisplayFor(model => model.Person.Notes)
         </dd>
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Person.PersonId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+
+        <div class="submit">
+            <input type="submit" value="Delete" class="delete" />
+        </div>
+        <a href='javascript:history.go(-1)'>Tilbage</a>
     </form>
 </div>
