--- a/HouHavn.Web/Pages/Lists/People/Edit.cshtml
+++ b/HouHavn.Web/Pages/Lists/People/Edit.cshtml
@@ -135,7 +135,7 @@
 
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a href='javascript:history.go(-1)'>Tilbage</a>
 </div>
 
 @section Scripts {
