Fixed the few design errors.

--- a/HouHavn.Web/Pages/Creation/Boats.cshtml
+++ b/HouHavn.Web/Pages/Creation/Boats.cshtml
@@ -79,7 +79,7 @@
     </div>
 
     <div class="submit">
-        <input type="submit" value="Opret Båd" />
+        <input type="submit" value="Opret Båd" class="create"/>
     </div>
 </form>
 
