--- a/HouHavn.Web/Pages/Creation/People.cshtml
+++ b/HouHavn.Web/Pages/Creation/People.cshtml
@@ -129,7 +129,7 @@
     </div>
 
     <div class="submit">
-        <input type="submit" value="Opret kunde"/>
+        <input type="submit" value="Opret kunde" class="create"/>
     </div>
 </form>
 
