Styling and fixes

--- a/HouHavn.Web/Pages/Display/SearchResult.cshtml
+++ b/HouHavn.Web/Pages/Display/SearchResult.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
-@model HouHavn.Web.Pages.Creation.SearchResultModel
+@model HouHavn.Web.Pages.Display.SearchResultModel
 @{
     ViewData["Title"] = "SearchResult";
 }
 
-<h1>SearchResult</h1>
+<h1>Søgeresultat for: @Model.SearchQuery</h1>
 
 
 <table>
