--- a/HouHavn.Web/Pages/Lists/Berths/Delete.cshtml
+++ b/HouHavn.Web/Pages/Lists/Berths/Delete.cshtml
@@ -29,8 +29,8 @@
         <input type="hidden" asp-for="Berth.BerthId" />
 
         <div class="submit">
-            <input type="submit" value="Delete" class="delete" />
+            <input type="submit" value="Slet bådplads" class="delete" />
         </div>
-        <a asp-page="./Index">Back to List</a>
+        <a href='javascript:history.go(-1)'>Tilbage</a>
     </form>
 </div>
