--- a/HouHavn.Web/Pages/Lists/Berths/Index.cshtml
+++ b/HouHavn.Web/Pages/Lists/Berths/Index.cshtml
@@ -31,7 +31,7 @@
                 @Html.DisplayFor(modelItem => item.Bridge)
             </td>
             <td>
-                <a asp-page="./Delete" asp-route-id="@item.BerthId" class="delete">Delete</a>
+                <a asp-page="./Delete" asp-route-id="@item.BerthId" class="delete">Slet</a>
             </td>
         </tr>
 }
