--- a/HouHavn.Web/Pages/Lists/Boats/Edit.cshtml
+++ b/HouHavn.Web/Pages/Lists/Boats/Edit.cshtml
@@ -2,7 +2,7 @@
 @model HouHavn.Web.Pages.Boats.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Redigér detaljer for båd";
 }
 
 <h1>Redigér detaljer for båd</h1>
