--- a/HouHavn.Web/Pages/Lists/People/Delete.cshtml
+++ b/HouHavn.Web/Pages/Lists/People/Delete.cshtml
@@ -111,7 +111,7 @@
         <input type="hidden" asp-for="Person.PersonId" />
 
         <div class="submit">
-            <input type="submit" value="Delete" class="delete" />
+            <input type="submit" value="Slet kunde" class="delete" />
         </div>
         <a href='javascript:history.go(-1)'>Tilbage</a>
     </form>
