--- a/HouHavn.Web/Pages/Lists/People/Edit.cshtml
+++ b/HouHavn.Web/Pages/Lists/People/Edit.cshtml
@@ -2,12 +2,11 @@
 @model HouHavn.Web.Pages.Lists.People.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Redigér detaljer for kunde";
 }
 
-<h1>Edit</h1>
+<h1>Redigér detaljer for kunde</h1>
 
-<h4>Person</h4>
 <hr />
 
 <form method="post">
