--- a/HouHavn.Web/Pages/Shared/_Layout.cshtml
+++ b/HouHavn.Web/Pages/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                         </div>
                     </li>
                 </ul>
-                <form action="/Creation/SearchResult" method="get" autocomplete="off">
+                <form action="/Display/SearchResult" method="get" autocomplete="off">
                     <input type="text" placeholder="Personer, Båd navn, Båd type" name="searchQuery" />
                     <input type="submit" value="Søg" />
                 </form>
