--- a/HouHavn.Web/Pages/Lists/People/Delete.cshtml
+++ b/HouHavn.Web/Pages/Lists/People/Delete.cshtml
@@ -7,6 +7,7 @@
 
 <h1>Slet kunde</h1>
 
+
 <h3>Er du sikker på at du vil slette denne kunde?</h3>
 <div>
 
@@ -105,8 +106,18 @@
         <dd>
             @Html.DisplayFor(model => model.Person.Notes)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Person.Boats)
+        </dt>
+        <dd>
+            @foreach (var boat in Model.Person.Boats)
+            {
+                <a asp-page="../Boats/Details" asp-route-id="@boat.BoatId">@boat.Name</a><br />
+            }
+        </dd>
     </dl>
-    
+        <p class="error">@Model.ErrorMsg</p>
+
     <form method="post">
         <input type="hidden" asp-for="Person.PersonId" />
 
